--- a/Atlas.Reporting.UI/Server/appsettings.json
+++ b/Atlas.Reporting.UI/Server/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "OrderCnn": "Server=188.121.112.160;Database=OrderingDb;user id=sa;password=5q8Ms#dbBte6tI;",
-    "SnappFoodCnn": "Server=188.121.112.160;Database=SnappFoodDb;user id=sa;password=5q8Ms#dbBte6tI;",
-    "InternalCnn": "Server=188.121.112.160;Database=InternalSendingDb;user id=sa;password=5q8Ms#dbBte6tI;"
+    "OrderCnn": "Server=79.175.131.52;Database=OrderingDb;user id=sa;password=p2wB0B43*7lo;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+    "SnappFoodCnn": "Server=79.175.131.52;Database=SnappFoodDb;user id=sa;password=p2wB0B43*7lo;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+    "InternalCnn": "Server=79.175.131.52;Database=InternalSendingDb;user id=sa;password=p2wB0B43*7lo;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
